# swiftd-atari-prediction-benchmark

./: CMakeLists.txt  README.md  main.cpp
configs/: lambda_sweep_sample_config.json  sample_config.json
include/environments/: proto_prediction_environments.h
include/evaluators/: predictionEvaluator.h
include/experiment/: Experiment.h
include/logger/: logger.h
include/swifttd/: SwiftTD.h
policies/: AirRaidNoFrameskip-v4.txt  AlienNoFrameskip-v4.txt  AmidarNoFrameskip-v4.txt  AssaultNoFrameskip-v4.txt  AsterixNoFrameskip-v4.txt  AsteroidsNoFrameskip-v4.txt  AtlantisNoFrameskip-v4.txt  BankHeistNoFrameskip-v4.txt  BattleZoneNoFrameskip-v4.txt  BeamRiderNoFrameskip-v4.txt  BerzerkNoFrameskip-v4.txt  BowlingNoFrameskip-v4.txt  BoxingNoFrameskip-v4.txt  BreakoutNoFrameskip-v4.txt  CarnivalNoFrameskip-v4.txt  CentipedeNoFrameskip-v4.txt  ChopperCommandNoFrameskip-v4.txt  CrazyClimberNoFrameskip-v4.txt  DemonAttackNoFrameskip-v4.txt  DoubleDunkNoFrameskip-v4.txt  EnduroNoFrameskip-v4.txt  FishingDerbyNoFrameskip-v4.txt  FreewayNoFrameskip-v4.txt  FrostbiteNoFrameskip-v4.txt  GopherNoFrameskip-v4.txt  GravitarNoFrameskip-v4.txt  HeroNoFrameskip-v4.txt  IceHockeyNoFrameskip-v4.txt  JamesbondNoFrameskip-v4.txt  JourneyEscapeNoFrameskip-v4.txt  KangarooNoFrameskip-v4.txt  KrullNoFrameskip-v4.txt  KungFuMasterNoFrameskip-v4.txt  MontezumaRevengeNoFrameskip-v4.txt  MsPacmanNoFrameskip-v4.txt  PhoenixNoFrameskip-v4.txt  PitfallNoFrameskip-v4.txt  PongNoFrameskip-v4.txt  PooyanNoFrameskip-v4.txt  PrivateEyeNoFrameskip-v4.txt  (+18 more)
src/: CMakeLists.txt  utils.cpp
src/atari/: CMakeLists.txt
src/atari/common/: CMakeLists.txt
src/atari/emucore/: CMakeLists.txt
src/atari/environment/: CMakeLists.txt
src/atari/games/: CMakeLists.txt
src/atari/games/supported/: CMakeLists.txt
src/environments/: proto_prediction_environments.cpp
src/evaluators/: CMakeLists.txt  predictionEvaluator.cpp
src/experiment/: CMakeLists.txt  Experiment.cpp
src/logger/: CMakeLists.txt  logger.cpp
src/swifttd/: SwiftTD.cpp
