add_library(Atari
        ../environments/proto_prediction_environments.cpp
        ale_interface.cpp
        common/ColourPalette.cpp
        common/Constants.cpp
        common/Log.cpp
        common/Palettes.hpp
        common/ScreenExporter.cpp
        common/SoundExporter.cpp
        common/SoundNull.cxx
        common/SoundSDL.cxx
        common/SDL2.cpp
        common/DynamicLoad.cpp
        common/ScreenSDL.cpp
        emucore/Cart.cxx
        emucore/Cart0840.cxx
        emucore/Cart2K.cxx
        emucore/Cart3E.cxx
        emucore/Cart3F.cxx
        emucore/Cart4A50.cxx
        emucore/Cart4K.cxx
        emucore/CartAR.cxx
        emucore/CartCV.cxx
        emucore/CartDPC.cxx
        emucore/CartE0.cxx
        emucore/CartE7.cxx
        emucore/CartF4.cxx
        emucore/CartF4SC.cxx
        emucore/CartF6.cxx
        emucore/CartF6SC.cxx
        emucore/CartF8.cxx
        emucore/CartF8SC.cxx
        emucore/CartFASC.cxx
        emucore/CartFE.cxx
        emucore/CartMB.cxx
        emucore/CartMC.cxx
        emucore/CartUA.cxx
        emucore/Console.cxx
        emucore/Control.cxx
        emucore/Deserializer.cxx
        emucore/Device.cxx
        emucore/Event.cxx
        emucore/Joystick.cxx
        emucore/M6502.cxx
        emucore/M6502Hi.cxx
        emucore/M6502Low.cxx
        emucore/M6532.cxx
        emucore/MD5.cxx
        emucore/MediaSrc.cxx
        emucore/NullDev.cxx
        emucore/OSystem.cxx
        emucore/Paddles.cxx
        emucore/Props.cxx
        emucore/PropsSet.cxx
        emucore/Random.cxx
        emucore/Serializer.cxx
        emucore/Settings.cxx
        emucore/Switches.cxx
        emucore/System.cxx
        emucore/TIA.cxx
        emucore/TIASnd.cxx
        environment/ale_state.cpp
        environment/phosphor_blend.cpp
        environment/stella_environment.cpp
        environment/stella_environment_wrapper.cpp
        games/Roms.cpp
        games/RomSettings.cpp
        games/RomUtils.cpp
        games/supported/Adventure.cpp
        games/supported/AirRaid.cpp
        games/supported/Alien.cpp
        games/supported/Amidar.cpp
        games/supported/Assault.cpp
        games/supported/Asterix.cpp
        games/supported/Asteroids.cpp
        games/supported/Atlantis.cpp
        games/supported/Atlantis2.cpp
        games/supported/Backgammon.cpp
        games/supported/BankHeist.cpp
        games/supported/BasicMath.cpp
        games/supported/BattleZone.cpp
        games/supported/BeamRider.cpp
        games/supported/Berzerk.cpp
        games/supported/Blackjack.cpp
        games/supported/Bowling.cpp
        games/supported/Boxing.cpp
        games/supported/Breakout.cpp
        games/supported/Carnival.cpp
        games/supported/Casino.cpp
        games/supported/Centipede.cpp
        games/supported/ChopperCommand.cpp
        games/supported/CrazyClimber.cpp
        games/supported/Crossbow.cpp
        games/supported/DarkChambers.cpp
        games/supported/Defender.cpp
        games/supported/DemonAttack.cpp
        games/supported/DonkeyKong.cpp
        games/supported/DoubleDunk.cpp
        games/supported/Earthworld.cpp
        games/supported/ElevatorAction.cpp
        games/supported/Enduro.cpp
        games/supported/Entombed.cpp
        games/supported/Et.cpp
        games/supported/FishingDerby.cpp
        games/supported/FlagCapture.cpp
        games/supported/Freeway.cpp
        games/supported/Frogger.cpp
        games/supported/Frostbite.cpp
        games/supported/Galaxian.cpp
        games/supported/Gopher.cpp
        games/supported/Gravitar.cpp
        games/supported/Hangman.cpp
        games/supported/HauntedHouse.cpp
        games/supported/Hero.cpp
        games/supported/HumanCannonball.cpp
        games/supported/IceHockey.cpp
        games/supported/JamesBond.cpp
        games/supported/JourneyEscape.cpp
        games/supported/Kaboom.cpp
        games/supported/Kangaroo.cpp
        games/supported/KeystoneKapers.cpp
        games/supported/Kingkong.cpp
        games/supported/Klax.cpp
        games/supported/Koolaid.cpp
        games/supported/Krull.cpp
        games/supported/KungFuMaster.cpp
        games/supported/LaserGates.cpp
        games/supported/LostLuggage.cpp
        games/supported/MarioBros.cpp
        games/supported/MiniatureGolf.cpp
        games/supported/MontezumaRevenge.cpp
        games/supported/MrDo.cpp
        games/supported/MsPacman.cpp
        games/supported/NameThisGame.cpp
        games/supported/Othello.cpp
        games/supported/Pacman.cpp
        games/supported/Phoenix.cpp
        games/supported/Pitfall.cpp
        games/supported/Pitfall2.cpp
        games/supported/Pong.cpp
        games/supported/Pooyan.cpp
        games/supported/PrivateEye.cpp
        games/supported/QBert.cpp
        games/supported/RiverRaid.cpp
        games/supported/RoadRunner.cpp
        games/supported/RoboTank.cpp
        games/supported/Seaquest.cpp
        games/supported/SirLancelot.cpp
        games/supported/Skiing.cpp
        games/supported/Solaris.cpp
        games/supported/SpaceInvaders.cpp
        games/supported/SpaceWar.cpp
        games/supported/StarGunner.cpp
        games/supported/Superman.cpp
        games/supported/Surround.cpp
        games/supported/Tennis.cpp
        games/supported/Tetris.cpp
        games/supported/TicTacToe3d.cpp
        games/supported/TimePilot.cpp
        games/supported/Trondead.cpp
        games/supported/Turmoil.cpp
        games/supported/Tutankham.cpp
        games/supported/UpNDown.cpp
        games/supported/Venture.cpp
        games/supported/VideoCheckers.cpp
        games/supported/VideoChess.cpp
        games/supported/VideoCube.cpp
        games/supported/VideoPinball.cpp
        games/supported/WizardOfWor.cpp
        games/supported/WordZapper.cpp
        games/supported/YarsRevenge.cpp
        games/supported/Zaxxon.cpp
)